[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Explosions/Ex-56-BFG-Pri.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Explosions/EX-56-BFG-Center.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Explosions/EX-56-BFG-Ring.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Explode"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 2, 1, 0, 1, 0, 1, 0, 2, 0, 1, 2, 0, 2, 1, 0, 1, 0, 1, 0, 2, 0, 0, 1, 2, 0, 2, 1, 0, 1, 0, 1, 0, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D-outer/CollisionShape2D-outer:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D2-inner/CollisionShape2D-inner:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite2:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1080.0 ]
}
tracks/9/type = "method"
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "kill_me"
} ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprite2:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.05, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2, 2 ), Vector2( 0.1, 0.1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprite:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1080.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 0.26
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.18, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 2.5, 2.5 ), Vector2( 2, 2 ), Vector2( 1.75, 1.75 ), Vector2( 1.5, 1.5 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ), Vector2( 0.75, 0.75 ), Vector2( 0.5, 0.5 ), Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 730.0

[sub_resource type="CircleShape2D" id=4]
radius = 126.491

[sub_resource type="CircleShape2D" id=5]
radius = 150.333

[node name="Ex-02-Standard" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 1 )
anims/fade = SubResource( 2 )

[node name="Area2D-outer" type="Area2D" parent="."]
gravity_distance_scale = 1024.0
gravity_vec = Vector2( -1, -1 )
gravity = -1024.0
linear_damp = 0.0
angular_damp = 0.0
collision_layer = 512
collision_mask = 395786

[node name="CollisionShape2D-outer" type="CollisionShape2D" parent="Area2D-outer"]
shape = SubResource( 3 )

[node name="Area2D2-inner" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 921098

[node name="CollisionShape2D-inner" type="CollisionShape2D" parent="Area2D2-inner"]
shape = SubResource( 4 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
space_override = 2
gravity_point = true
gravity_vec = Vector2( -1, -1 )
gravity = -750.0
linear_damp = 0.0
angular_damp = 0.0
monitoring = false
monitorable = false
collision_layer = 786432
collision_mask = 983040

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D-outer" to="." method="_on_Area2Douter_body_entered"]
[connection signal="body_entered" from="Area2D2-inner" to="." method="_on_Area2D2inner_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
